feat(Performance optimization of nearby)